# week03/eternal-registry-api/src/routes/auth.js
@@ -3,13 +3,9 @@ const { loginPassword, loginGithub, githubCallback, logout } = require('../contr
 const { loginValidationRules, validate } = require('../utils/validators');
 
 routes.post('/login/password', loginValidationRules(),validate, loginPassword);
-routes.get('/auth/github', loginGithub );
-routes.get('/auth/github/callback', githubCallback);
-//   passport.authenticate('github', { failureRedirect: '/api-docs' }),
-//   function(req, res) {
-//     // Successful authentication, redirect home.
-//     res.redirect('/');
-//   });
+routes.get('/github', loginGithub );
+routes.get('/github/callback', githubCallback);
+
 routes.post('/logout',logout);
 
 module.exports = routes; 
